--- a/index.css
+++ b/index.css
@@ -12,3 +12,10 @@
 .about-us h1 {
     font-family: 'Times New Roman', Times, serif sans-serif;
 }
+
+.banner-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
