--- a/index.css
+++ b/index.css
@@ -19,3 +19,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.about-us h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+}
