--- a/index.css
+++ b/index.css
@@ -23,3 +23,10 @@
 .about-us h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+.about-us p {
+    text-align: left;
+    width: 40%;
+    margin: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
