--- a/index.css
+++ b/index.css
@@ -22,10 +22,10 @@
 
 .about-us h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 700;
 }
 
 .about-us p {
-    justify-content: left;
     text-align: left;
     width: 40%;
     margin: auto;
