--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@
 }
 
 .banner-section {
-    padding: 20px 50px
+    padding: 20px 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,4 +37,21 @@
     width: 40%;
     margin: auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create two equal columns that sits next to each other */
+.column {
+    flex: 50%;
+    padding: 0 4px;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
 }
