--- a/index.css
+++ b/index.css
@@ -51,6 +51,10 @@
 .column {
     flex: 50%;
     padding: 0 4px;
+    border-style: inset inset outset outset;
+    border-width: 5px;
+    border-color: aqua;
+    vertical-align: middle;
 }
 
 .column img {
