--- a/index.css
+++ b/index.css
@@ -51,7 +51,8 @@
     padding: 0 4px;
 }
 
-/* Create two equal columns that sits next to each other */
+/* Create two equal columns that sits next to each other 
+This is what jubalini made, im just greenning it out for now without erasing it.
 .column {
     flex: 50%;
     padding: 0 4px;
@@ -78,3 +79,6 @@ text-align: center;
 .menu-item-description {
 
 }
+
+*/
+
