--- a/index.css
+++ b/index.css
@@ -82,6 +82,16 @@ text-align: center;
 
 */
 
+.parent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    outline: auto white dashed;
+    box-shadow: inset;
+    }
+    
     .div1 { grid-area: 1 / 1 / 2 / 2; }
     .div2 { grid-area: 1 / 2 / 2 / 3; }
     .div3 { grid-area: 2 / 1 / 3 / 2; }
