--- a/index.css
+++ b/index.css
@@ -84,17 +84,17 @@ text-align: center;
 
 .parent {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
-    outline: auto white dashed;
-    box-shadow: 50px;
-    border: 59px white;
-    position: center;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 2fr 1fr 2fr 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 7px;
     }
     
     .div1 { grid-area: 1 / 1 / 2 / 2; }
-    .div2 { grid-area: 1 / 2 / 2 / 3; }
-    .div3 { grid-area: 2 / 1 / 3 / 2; }
+    .div2 { grid-area: 2 / 1 / 3 / 2; }
+    .div3 { grid-area: 1 / 2 / 2 / 3; }
     .div4 { grid-area: 2 / 2 / 3 / 3; }
+    .div5 { grid-area: 3 / 1 / 4 / 2; }
+    .div6 { grid-area: 4 / 1 / 5 / 2; }
+    .div7 { grid-area: 3 / 2 / 4 / 3; }
+    .div8 { grid-area: 4 / 2 / 5 / 3; }
