--- a/index.css
+++ b/index.css
@@ -98,3 +98,5 @@ text-align: center;
     .div6 { grid-area: 4 / 1 / 5 / 2; }
     .div7 { grid-area: 3 / 2 / 4 / 3; }
     .div8 { grid-area: 4 / 2 / 5 / 3; }
+
+    .div1 
