--- a/index.css
+++ b/index.css
@@ -102,5 +102,6 @@ text-align: center;
     .white-box {
         background-color: white;
         color: black;
-        size: 50px 90px;
+        height: 70px;
+        width: 99px;
     }
