--- a/index.css
+++ b/index.css
@@ -104,4 +104,5 @@ text-align: center;
         color: black;
         height: 70px;
         width: 99px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
