--- a/index.css
+++ b/index.css
@@ -90,10 +90,10 @@ text-align: center;
     grid-row-gap: 7px;
     }
     
-    .div1 { grid-area: 1 / 1 / 2 / 2; }
-    .div2 { grid-area: 2 / 1 / 3 / 2; }
-    .div3 { grid-area: 1 / 2 / 2 / 3; }
-    .div4 { grid-area: 2 / 2 / 3 / 3; }
+    .div1 { grid-area: 1 / 1 / 2 / 2; display: flex; }
+    .div2 { grid-area: 2 / 1 / 3 / 2; display: flex; }
+    .div3 { grid-area: 1 / 2 / 2 / 3; display: flex; }
+    .div4 { grid-area: 2 / 2 / 3 / 3; display: flex; }
     .div5 { grid-area: 3 / 1 / 4 / 2; }
     .div6 { grid-area: 4 / 1 / 5 / 2; }
     .div7 { grid-area: 3 / 2 / 4 / 3; }
@@ -101,7 +101,6 @@ text-align: center;
 
     .white-box {
         background-color: white;
-        display: flex;
         color: black;
         height: 150px;
         width: 500px;
