--- a/index.css
+++ b/index.css
@@ -94,7 +94,7 @@ text-align: center;
     justify-content: right;
     font-family: cursive;
     color: blue;
-    display: inherit;
+    display: inline;
     }
     
     .div1 { grid-area: 1 / 1 / 2 / 2; display: flex; }
