--- a/index.css
+++ b/index.css
@@ -109,6 +109,7 @@ text-align: center;
     .white-box {
         background-color: white;
         color: black;
+        display: flex;
         height: 150px;
         width: 500px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
