--- a/index.css
+++ b/index.css
@@ -90,6 +90,10 @@ text-align: center;
     grid-row-gap: 7px;
     }
 
+    .parent h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif
+    }
+
     .parent h2 {
     justify-content: right;
     font-family: cursive;
