--- a/index.css
+++ b/index.css
@@ -91,7 +91,9 @@ text-align: center;
     }
 
     .parent h1 {
-    font-family: Georgia, 'Times New Roman', Times, serif
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 14px;
+    font-style: italic;
     }
 
     .parent h2 {
