--- a/index.css
+++ b/index.css
@@ -115,6 +115,8 @@ text-align: center;
     .white-box {
         background-color: white;
         color: black;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 18px;
         display: inline;
         height: 180px;
         width: 500px;
