--- a/index.css
+++ b/index.css
@@ -117,7 +117,7 @@ text-align: center;
         color: black;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 18px;
-        display: inline;
+        display: flex;
         height: 180px;
         width: 500px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
