--- a/index.css
+++ b/index.css
@@ -99,6 +99,7 @@ text-align: center;
     .parent h2 {
     justify-content: right;
     font-family: cursive;
+    font-size: 12px;
     color: blue;
     display: flex;
     }
@@ -117,7 +118,6 @@ text-align: center;
         color: black;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 18px;
-        display: flex;
         height: 180px;
         width: 500px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
