--- a/index.css
+++ b/index.css
@@ -97,11 +97,12 @@ text-align: center;
     }
 
     .parent h2 {
-    justify-content: right;
+    justify-content: center;
     font-family: cursive;
-    font-size: 12px;
+    font-size: 16px;
     color: blue;
     display: flex;
+    font-style: oblique;
     }
     
     .div1 { grid-area: 1 / 1 / 2 / 2; display: flex; }
