--- a/index.css
+++ b/index.css
@@ -124,7 +124,7 @@ text-align: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
-    .body{
+    .banner-section {
         height: 100vh;
 	    display: grid;
 	    Place-items: center;
