--- a/index.css
+++ b/index.css
@@ -123,3 +123,8 @@ text-align: center;
         width: 500px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
+
+    .divA {
+        height: 200px;
+        width: 100%;
+    }
