--- a/index.css
+++ b/index.css
@@ -125,6 +125,6 @@ text-align: center;
     }
 
     .divA {
-        height: 200px;
-        width: 100%;
+        max-width: 100%;
+        height: 100px;
     }
