--- a/index.css
+++ b/index.css
@@ -124,14 +124,4 @@ text-align: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
-
-
-    .parent1 .div8 {
-        max-width: 100%;
-        height: 100px;
-    }
-
-    .div9 {
-            height: auto;
-            max-width: 10%;
-    }
+    .
