--- a/index.css
+++ b/index.css
@@ -124,4 +124,16 @@ text-align: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
-    
+    .parenttop {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
+        }
+        
+        .divA { grid-area: 1 / 1 / 2 / 2; }
+        .divB { grid-area: 1 / 2 / 2 / 4; }
+        .divC { grid-area: 2 / 1 / 3 / 4; }
+        .divD { grid-area: 3 / 1 / 4 / 2; }
+        .divE { grid-area: 3 / 2 / 4 / 4; }
