--- a/index.css
+++ b/index.css
@@ -124,7 +124,7 @@ text-align: center;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
-    .parenttop {
+    .newparent {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
@@ -132,8 +132,8 @@ text-align: center;
         grid-row-gap: 20px;
         }
         
-        .divA { grid-area: 1 / 1 / 2 / 2; }
-        .divB { grid-area: 1 / 2 / 2 / 4; }
-        .divC { grid-area: 2 / 1 / 3 / 4; }
-        .divD { grid-area: 3 / 1 / 4 / 2; }
-        .divE { grid-area: 3 / 2 / 4 / 4; }
+        .div9 { grid-area: 1 / 1 / 2 / 2; background-color: beige; }
+        .div10 { grid-area: 1 / 2 / 2 / 4; background-color: rgb(169, 169, 39);}
+        .div11 { grid-area: 2 / 1 / 3 / 4; background-color: rgb(118, 40, 179);}
+        .div12 { grid-area: 3 / 1 / 4 / 2; background-color: rgb(247, 15, 15);}
+        .div13 { grid-area: 3 / 2 / 4 / 4; background-color: rgb(255, 128, 183);}
