--- a/index.css
+++ b/index.css
@@ -132,8 +132,38 @@ text-align: center;
         grid-row-gap: 20px;
         }
         
-        .div9 { grid-area: 1 / 1 / 2 / 2; background-color: beige; display: flex; }
+        .div9 { grid-area: 1 / 1 / 2 / 2; 
+            background-color: beige; 
+            display: flex;
+            justify-content: center;
+        }
+        
+        
         .div10 { grid-area: 1 / 2 / 2 / 4; background-color: rgb(169, 169, 39); display: flex;}
         .div11 { grid-area: 2 / 1 / 3 / 4; background-color: rgb(118, 40, 179); display: flex;}
         .div12 { grid-area: 3 / 1 / 4 / 2; background-color: rgb(247, 15, 15); display: flex;}
         .div13 { grid-area: 3 / 2 / 4 / 4; background-color: rgb(255, 128, 183); display: flex;}
+
+        .topnav {
+            background-color: #333;
+            overflow: hidden;
+          }
+
+          .topnav a {
+            float: left;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+          }
+
+          .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+          }
+
+          .topnav a.active {
+            background-color: #04AA6D;
+            color: white;
+          }
