--- a/index.css
+++ b/index.css
@@ -144,26 +144,54 @@ text-align: center;
         .div12 { grid-area: 3 / 1 / 4 / 2; background-color: rgb(247, 15, 15); display: flex;}
         .div13 { grid-area: 3 / 2 / 4 / 4; background-color: rgb(255, 128, 183); display: flex;}
 
-        .topnav {
-            background-color: #333;
-            overflow: hidden;
+        input[type=checkbox] {
+            display: none;
+          } 
+          
+          /* HAMBURGER MENU */
+          .hamburger {
+            display: none;
+            font-size: 24px;
+            user-select: none;
           }
-
-          .topnav a {
-            float: left;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-          }
-
-          .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-          }
-
-          .topnav a.active {
-            background-color: #04AA6D;
-            color: white;
+          
+          /* APPLYING MEDIA QUERIES */
+          @media (max-width: 768px) {
+           .menu {
+              display:none;
+              position: absolute;
+              background-color:teal;
+              right: 0;
+              left: 0;
+              text-align: center;
+              padding: 16px 0;
+            }
+          
+            .menu li:hover {
+              display: inline-block;
+              background-color:#4c9e9e;
+              transition: 0.3s ease;
+            }
+          
+            .menu li + li {
+              margin-top: 12px;
+            }
+          
+            input[type=checkbox]:checked ~ .menu {
+              display: block;
+            }
+          
+            .hamburger {
+              display: block;
+            }
+          
+            .dropdown {
+              left: 50%;
+              top: 30px;
+              transform: translateX(35%);
+            }
+          
+            .dropdown li:hover {
+              background-color: #4c9e9e;
+            }
           }
