--- a/index.css
+++ b/index.css
@@ -144,54 +144,26 @@ text-align: center;
         .div12 { grid-area: 3 / 1 / 4 / 2; background-color: rgb(247, 15, 15); display: flex;}
         .div13 { grid-area: 3 / 2 / 4 / 4; background-color: rgb(255, 128, 183); display: flex;}
 
-        input[type=checkbox] {
-            display: none;
-          } 
-          
-          /* HAMBURGER MENU */
-          .hamburger {
-            display: none;
-            font-size: 24px;
-            user-select: none;
-          }
-          
-          /* APPLYING MEDIA QUERIES */
-          @media (max-width: 768px) {
-           .menu {
-              display:none;
-              position: absolute;
-              background-color:teal;
-              right: 0;
-              left: 0;
-              text-align: center;
-              padding: 16px 0;
-            }
-          
-            .menu li:hover {
-              display: inline-block;
-              background-color:#4c9e9e;
-              transition: 0.3s ease;
-            }
-          
-            .menu li + li {
-              margin-top: 12px;
-            }
-          
-            input[type=checkbox]:checked ~ .menu {
-              display: block;
-            }
-          
-            .hamburger {
-              display: block;
-            }
-          
-            .dropdown {
-              left: 50%;
-              top: 30px;
-              transform: translateX(35%);
-            }
-          
-            .dropdown li:hover {
-              background-color: #4c9e9e;
-            }
-          }
+        ul.nav {
+            margin:0;
+            padding:0;
+            list-style:none;
+            height:36px; line-height:36px;
+            background:#0d7963; /* you can change the backgorund color here. */
+            font-family:Arial, Helvetica, sans-serif;
+            font-size:13px;
+        }
+        ul.nav li {
+            border-right:1px solid #189b80; /* you can change the border color matching to your background color */
+            float:left;
+        }
+        ul.nav a {
+            display:block;
+            padding:0 28px;
+            color:#ccece6;
+            text-decoration:none;
+        }
+        ul.nav a:hover,
+        ul.nav li.current a {
+            background:#086754;
+        }
