--- a/index.css
+++ b/index.css
@@ -132,11 +132,12 @@ text-align: center;
         grid-row-gap: 20px;
         }
         
+        /*
         .div9 { grid-area: 1 / 1 / 2 / 2; 
             background-color: beige; 
             display: flex;
             justify-content: center;
-        }
+        */
         
         
         .div10 { grid-area: 1 / 2 / 2 / 4; background-color: rgb(169, 169, 39); display: flex;}
@@ -147,8 +148,9 @@ text-align: center;
         ul.nav {
             margin:0;
             padding:0;
+            justify-content: right;
             list-style:none;
-            height:36px; line-height:36px;
+            height:50px; line-height:50px;
             background:#0d7963; /* you can change the backgorund color here. */
             font-family:Arial, Helvetica, sans-serif;
             font-size:13px;
