--- a/index.css
+++ b/index.css
@@ -133,16 +133,23 @@ text-align: center;
         }
         
 
-        .div9 { grid-area: 1 / 1 / 2 / 2; 
+        .div9 { 
+            grid-area: 1 / 1 / 2 / 2; 
             background-color: beige; 
             display: flex;
             justify-content: center;
             font-family: cursive;
             color: blue;
             font-size: 15px;
+            height: 50px;
         }
         
-        .div10 { grid-area: 1 / 2 / 2 / 4; background-color: rgb(169, 169, 39); display: flex;}
+        .div10 { 
+            grid-area: 1 / 2 / 2 / 4; background-color: rgb(169, 169, 39); 
+            display: flex;
+            height: 50px;
+        }
+
         .div11 { grid-area: 2 / 1 / 3 / 4; background-color: rgb(118, 40, 179); display: flex;}
         .div12 { grid-area: 3 / 1 / 4 / 2; background-color: rgb(247, 15, 15); display: flex;}
         .div13 { grid-area: 3 / 2 / 4 / 4; background-color: rgb(255, 128, 183); display: flex;}
