--- a/index.css
+++ b/index.css
@@ -142,6 +142,7 @@ text-align: center;
             color: blue;
             font-size: 15px;
             height: 50px;
+            position: absolute;
         }
         
         .div10 { 
