--- a/index.css
+++ b/index.css
@@ -142,7 +142,15 @@ text-align: center;
             color: blue;
             font-size: 15px;
             height: 50px;
+        }
+
+        .div9 h1 {
+            border: 5px solid;
             position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 10px;
         }
         
         .div10 { 
