--- a/index.css
+++ b/index.css
@@ -147,10 +147,16 @@ text-align: center;
         .div9 h1 {
             border: 5px solid;
             position: absolute;
-            top: 1%;
-            left: 1%;
+            top: 10%;
+            left: 10%;
             transform: translate(-50%, -50%);
             padding: 10px;
+        }
+
+        .div9 img {
+            position: absolute;
+            top: 15%;
+            left: 15%;
         }
         
         .div10 { 
