--- a/index.css
+++ b/index.css
@@ -147,16 +147,17 @@ text-align: center;
         .div9 h1 {
             border: 5px solid;
             position: absolute;
-            top: 10%;
-            left: 10%;
+            top: 3%;
+            left: 20%;
             transform: translate(-50%, -50%);
             padding: 10px;
         }
 
         .div9 img {
             position: absolute;
-            top: 15%;
-            left: 15%;
+            top: 10%;
+            left: 1%;
+            transform: translate(-50%, -50%);
         }
         
         .div10 { 
