--- a/index.css
+++ b/index.css
@@ -179,6 +179,7 @@ text-align: center;
             background:#0d7963; /* you can change the backgorund color here. */
             font-family:Arial, Helvetica, sans-serif;
             font-size:13px;
+            float: right;
         }
         ul.nav li {
             border-right:1px solid #189b80; /* you can change the border color matching to your background color */
