--- a/index.css
+++ b/index.css
@@ -135,11 +135,11 @@ text-align: center;
 
         .div9 { 
             grid-area: 1 / 1 / 2 / 2; 
-            background-color: beige; 
+            background-color: #00385a; 
             display: flex;
             justify-content: center;
             font-family: cursive;
-            color: blue;
+            color: white;
             font-size: 10px;
             height: 50px;
         }
@@ -160,7 +160,8 @@ text-align: center;
         }
         
         .div10 { 
-            grid-area: 1 / 2 / 2 / 4; background-color: rgb(169, 169, 39); 
+            grid-area: 1 / 2 / 2 / 4; 
+            background-color: #00385a; 
             display: flex;
             height: 50px;
         }
