--- a/index.css
+++ b/index.css
@@ -176,7 +176,7 @@ text-align: center;
             position: relative;
             list-style:none;
             height:50px; line-height:50px;
-            background:#030e3f; /* you can change the backgorund color here. */
+            background:#1c2650; /* you can change the backgorund color here. */
             font-family:Arial, Helvetica, sans-serif;
             font-size:13px;
             float: right;
