--- a/index.css
+++ b/index.css
@@ -195,3 +195,14 @@ text-align: center;
         ul.nav li.current a {
             background:#0e6296;
         }
+
+        div.scroll-container {
+            background-color: #333;
+            overflow: auto;
+            white-space: nowrap;
+            padding: 10px;
+          }
+          
+          div.scroll-container img {
+            padding: 10px;
+          }
