--- a/index.css
+++ b/index.css
@@ -202,7 +202,7 @@ text-align: center;
             white-space: nowrap;
             padding: 10px;
             display: flex;
-            
+            overflow: hidden; 
           }
           
           div.scroll-container img {
