--- a/index.css
+++ b/index.css
@@ -203,6 +203,7 @@ text-align: center;
             padding: 10px;
             display: flex;
             overflow: hidden; 
+            display: inline-block;
           }
           
           div.scroll-container img {
