--- a/index.css
+++ b/index.css
@@ -197,14 +197,6 @@ text-align: center;
             background:#0e6296;
         }
 
-        div.scroll-container {
-            background-color: #333;
-            overflow: auto;
+        .div11 {
             display: flex;
-            top: 25%;
-          }
-
-          div.scroll-container img {
-            padding: 10px;
-            display: flex;
-          }
+        }
