--- a/index.css
+++ b/index.css
@@ -198,7 +198,6 @@ text-align: center;
             background:#0e6296;
         }
 
-        .div11 {
-            display: flex;
-            top: 12%;
+        div11 {
+            vertical-align: top;
         }
