--- a/index.css
+++ b/index.css
@@ -167,7 +167,7 @@ text-align: center;
             height: 50px;
         }
 
-        .div11 { grid-area: 2 / 1 / 3 / 4; background-color: rgb(118, 40, 179); display: flex;}
+        .div11 { grid-area: 2 / 1 / 3 / 4; background-color: rgb(118, 40, 179); }
         .div12 { grid-area: 3 / 1 / 4 / 2; background-color: rgb(247, 15, 15); display: flex;}
         .div13 { grid-area: 3 / 2 / 4 / 4; background-color: rgb(255, 128, 183); display: flex;}
 
@@ -199,5 +199,5 @@ text-align: center;
         }
 
         div11 {
-            vertical-align: top;
+            display: block;
         }
