--- a/index.css
+++ b/index.css
@@ -167,7 +167,12 @@ text-align: center;
             height: 50px;
         }
 
-        .div11 { grid-area: 2 / 1 / 3 / 4; background-color: rgb(118, 40, 179); }
+        .div11 { grid-area: 2 / 1 / 3 / 4; 
+                background-color: rgb(118, 40, 179); 
+                vertical-align: top;
+        }
+
+
         .div12 { grid-area: 3 / 1 / 4 / 2; background-color: rgb(247, 15, 15); display: flex;}
         .div13 { grid-area: 3 / 2 / 4 / 4; background-color: rgb(255, 128, 183); display: flex;}
 
@@ -198,6 +203,3 @@ text-align: center;
             background:#0e6296;
         }
 
-        div11 {
-            vertical-align: top;
-        }
