--- a/index.css
+++ b/index.css
@@ -167,7 +167,8 @@ text-align: center;
             height: 50px;
         }
 
-        .div11 { grid-area: 2 / 1 / 3 / 4; 
+        .div11 { 
+                grid-area: 2 / 1 / 3 / 4; 
                 background-color: rgb(118, 40, 179); 
                 padding-top: 5%;
         }
@@ -181,7 +182,7 @@ text-align: center;
             padding:0;
             position: relative;
             list-style:none;
-            height:50px; line-height:50px;
+            height:50px; line-height:10px;
             background:#1c2650; /* you can change the backgorund color here. */
             font-family:Arial, Helvetica, sans-serif;
             font-size:13px;
