--- a/index.css
+++ b/index.css
@@ -125,6 +125,7 @@ text-align: center;
     }
 
     .newparent {
+        overflow:hidden;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
