--- a/index.css
+++ b/index.css
@@ -137,7 +137,6 @@ text-align: center;
         .div9 {
             grid-area: 1 / 1 / 2 / 2;
             background-color: #00385a;
-            display: flex;
             justify-content: center;
             font-family: cursive;
             color: white;
@@ -164,14 +163,15 @@ text-align: center;
         .div10 {
             grid-area: 1 / 2 / 2 / 4;
             background-color: #00385a;
-            display: flex;
             height: 50px;
+            width: 100%;
         }
 
         .div11 { 
             grid-area: 2 / 1 / 3 / 4; 
                 background-color: rgb(118, 40, 179); 
                 height: 500px;
+                width: 100%;
         }
 
 
@@ -204,14 +204,4 @@ text-align: center;
         ul.nav li.current a {
             background:#0e6296;
         }
-
-        .clearfix:after {
-            clear:both;
-            content:".";
-            display:block;
-            font-size:0;
-            height:0;
-            visibility:hidden;
-        }
-        .clearfix { display:block; }
 
