--- a/index.css
+++ b/index.css
@@ -142,6 +142,7 @@ text-align: center;
             color: white;
             font-size: 10px;
             height: 50px;
+            width: 100%;
         }
 
         .div9 h1 {
@@ -187,7 +188,7 @@ text-align: center;
             background:#1c2650; /* you can change the backgorund color here. */
             font-family:Arial, Helvetica, sans-serif;
             font-size:13px;
-            float: right;
+            float: left;
             display: flex;
         }
         ul.nav li {
