--- a/index.css
+++ b/index.css
@@ -105,14 +105,14 @@ text-align: center;
     font-style: oblique;
     }
     
-    .div1 { grid-area: 1 / 1 / 2 / 2; display: flex; }
-    .div2 { grid-area: 2 / 1 / 3 / 2; display: flex; }
-    .div3 { grid-area: 1 / 2 / 2 / 3; display: flex; }
-    .div4 { grid-area: 2 / 2 / 3 / 3; display: flex; }
-    .div5 { grid-area: 3 / 1 / 4 / 2; display: flex; }
-    .div6 { grid-area: 4 / 1 / 5 / 2; display: flex; }
-    .div7 { grid-area: 3 / 2 / 4 / 3; display: flex; }
-    .div8 { grid-area: 4 / 2 / 5 / 3; display: flex; }
+    .div1 { grid-area: 1 / 1 / 2 / 2;  }
+    .div2 { grid-area: 2 / 1 / 3 / 2;  }
+    .div3 { grid-area: 1 / 2 / 2 / 3;  }
+    .div4 { grid-area: 2 / 2 / 3 / 3;  }
+    .div5 { grid-area: 3 / 1 / 4 / 2;  }
+    .div6 { grid-area: 4 / 1 / 5 / 2;  }
+    .div7 { grid-area: 3 / 2 / 4 / 3;  }
+    .div8 { grid-area: 4 / 2 / 5 / 3;  }
 
     .white-box {
         background-color: white;
