--- a/index.css
+++ b/index.css
@@ -126,6 +126,7 @@ text-align: center;
 
     .newparent {
         overflow:hidden;
+        font-size: 0;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 1fr);
