--- a/index.css
+++ b/index.css
@@ -104,7 +104,7 @@ text-align: center;
     display: flex;
     font-style: oblique;
     }
-
+    
     .div1 { grid-area: 1 / 1 / 2 / 2;  }
     .div2 { grid-area: 2 / 1 / 3 / 2;  }
     .div3 { grid-area: 1 / 2 / 2 / 3;  }
@@ -168,9 +168,9 @@ text-align: center;
             width: 100%;
         }
 
-        .div11 {
-            grid-area: 2 / 1 / 3 / 4;
-                background-color: rgb(118, 40, 179);
+        .div11 { 
+            grid-area: 2 / 1 / 3 / 4; 
+                background-color: rgb(118, 40, 179); 
                 height: 500px;
                 width: 100%;
         }
@@ -207,19 +207,15 @@ text-align: center;
         }
 
         .div11 {
-<<<<<<< HEAD
-            background-color:#00385a;
-            overflow:auto;
-=======
-            background-color: #19037a;
-            overflow:scroll;
->>>>>>> 9a91beee7fd72a4bdd36bb12ed65c048e9ea4cc0
+            background-color: #333;
+            overflow: auto;
             white-space: nowrap;
             padding: 10px;
           }
-
-          .div11 img {
+          
+        .div11 img {
             padding: 10px;
           }
 
           html {background-color: #00385a;}
+
