--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
 
 .nav-flex-row li {
     background-color: white;
-    width: 500px;
+    width: 100%;
     text-decoration: none;
     list-style-type: none;
     padding: 20px 15px;
