--- a/index.css
+++ b/index.css
@@ -119,8 +119,8 @@ text-align: center;
         color: black;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 18px;
-        height: 180px;
-        width: 500px;
+        height: 100%;
+        width: auto;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
