--- a/index.css
+++ b/index.css
@@ -119,8 +119,8 @@ text-align: center;
         color: black;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 18px;
-        height: 100%;
-        width: auto;
+        height: 180px;
+        width: 500px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
 
@@ -221,4 +221,4 @@ text-align: center;
           }
 
           html {background-color: #00385a;}
-
+mm
