--- a/index.css
+++ b/index.css
@@ -119,9 +119,10 @@ text-align: center;
         color: black;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 18px;
-        height: 180px;
-        width: 500px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        height: 70%;
+        width: auto;
+        padding-top: 1px;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;   
     }
 
     .newparent {
@@ -221,4 +222,3 @@ text-align: center;
           }
 
           html {background-color: #00385a;}
-mm
