--- a/index.css
+++ b/index.css
@@ -20,12 +20,13 @@
 .About-us h1 {
     font-family: 'Times New Roman', Times, serif sans-serif;
     color: beige;
+    margin-left: 5%;
 }
 
 .About-us p {
     background-color: white;
     justify-content: left;
-    
+
 }
 
 
