--- a/index.css
+++ b/index.css
@@ -231,4 +231,9 @@ text-align: center;
 
           html {background-color: #00385a;}
 
-          
+          .food-menu-section h1 {
+            font-family: cursive;
+    font-weight: 700;
+    font-size: 40px;
+    color: white;
+          }
