--- a/index.css
+++ b/index.css
@@ -237,3 +237,7 @@ text-align: center;
     font-size: 40px;
     color: white;
           }
+
+          .food-menu-section p {
+            color: #00385a;
+          }
