--- a/index.css
+++ b/index.css
@@ -232,7 +232,13 @@ text-align: center;
             grid-row-gap: 0px;
             }
             
-            .diva { grid-area: 1 / 1 / 2 / 2; }
+            .diva { grid-area: 1 / 1 / 2 / 2;
+            color: #00385a;
+            background-color: white;
+            font-family: cursive;
+            }
+
+
             .divb { grid-area: 1 / 2 / 2 / 3; }
             .divc { grid-area: 2 / 1 / 3 / 3; }
             .divd { grid-area: 3 / 1 / 4 / 2; }
