--- a/index.css
+++ b/index.css
@@ -232,10 +232,19 @@ text-align: center;
             grid-row-gap: 0px;
             }
             
-            .diva { grid-area: 1 / 1 / 2 / 2;
+            .diva h1{
+                height: 25px;
+            }
+
+            .diva p{ grid-area: 1 / 1 / 2 / 2;
             color: #00385a;
             background-color: white;
-            font-family: cursive;
+            font-family: Arial, Helvetica, sans-serif;
+                   height: 190px;
+                    width: 90%;
+                    font-size: 20px;
+                    text-indent: 20px;
+                    padding: 25px;
             }
 
 
