--- a/index.css
+++ b/index.css
@@ -249,6 +249,15 @@ text-align: center;
 
 
             .divb { grid-area: 1 / 2 / 2 / 3; }
+
+            .divb img{ 
+                display: flex;
+                align-items: center;
+                width: 380px;
+                background-color: red;
+                margin: auto;
+            }
+
             .divc { grid-area: 2 / 1 / 3 / 3; }
             .divd { grid-area: 3 / 1 / 4 / 2; }
             .dive { grid-area: 4 / 1 / 5 / 2; }
