--- a/index.css
+++ b/index.css
@@ -236,7 +236,7 @@ text-align: center;
                 height: 25px;
             }
 
-            .diva p{ grid-area: 1 / 1 / 2 / 2;
+            .diva p {
             color: #00385a;
             background-color: white;
             font-family: Arial, Helvetica, sans-serif;
@@ -246,6 +246,8 @@ text-align: center;
                     text-indent: 20px;
                     padding: 25px;
             }
+            .diva {
+                grid-area: 1 / 1 / 2 / 2;}
 
 
             .divb { grid-area: 1 / 2 / 2 / 3; }
