--- a/index.css
+++ b/index.css
@@ -227,7 +227,7 @@ text-align: center;
           .parent {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(6, 1fr);
+            grid-template-rows: auto;
             grid-column-gap: 0px;
             grid-row-gap: 0px;
             }
