--- a/index.css
+++ b/index.css
@@ -218,6 +218,7 @@ text-align: center;
     font-weight: 700;
     font-size: 60px;
     color: white;
+    margin: auto;
           }
 
           .food-menu-section p {
