--- a/index.css
+++ b/index.css
@@ -216,9 +216,12 @@ text-align: center;
           .food-menu-section h1 {
             font-family: cursive;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 50px;
     color: white;
     margin: auto;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px; 
           }
 
           .food-menu-section p {
