--- a/index.css
+++ b/index.css
@@ -261,6 +261,7 @@ text-align: center;
                 font-family: cursive;
                 color: white;
                 text-align: center;
+                margin-right: 230px;
             }
 
             .divd { grid-area: 3 / 1 / 4 / 2; }
