--- a/index.css
+++ b/index.css
@@ -262,6 +262,8 @@ text-align: center;
                 color: white;
                 text-align: center;
                 margin-right: 230px;
+                border: 1px solid rgb(255, 255, 255);
+                outline: 5px dotted rgb(35, 164, 162);
             }
 
             .divd { grid-area: 3 / 1 / 4 / 2; }
