--- a/index.css
+++ b/index.css
@@ -276,6 +276,11 @@ text-align: center;
 
             .dive { grid-area: 4 / 1 / 5 / 2; }
 
+            .dive p {
+                color:#00385a;
+                background-color: white;
+            }
+
 
             .divf { grid-area: 3 / 2 / 4 / 3; }
 
