--- a/index.css
+++ b/index.css
@@ -302,6 +302,15 @@ text-align: center;
 
             .divg { grid-area: 4 / 2 / 5 / 3; }
 
+            .divg p {
+                    color:#00385a;
+                    background-color: white;
+                    font-size: 30px;
+                    text-indent: 30px;
+                    border: 1px solid rgb(255, 255, 255);
+                    outline: 5px dotted rgb(35, 164, 162);
+            }
+
 
             .divh { grid-area: 5 / 1 / 6 / 2; }
 
@@ -311,6 +320,15 @@ text-align: center;
             }
             
             .divi { grid-area: 6 / 1 / 7 / 2; }
+
+            .divi p {
+                    color:#00385a;
+                    background-color: white;
+                    font-size: 30px;
+                    text-indent: 30px;
+                    border: 1px solid rgb(255, 255, 255);
+                    outline: 5px dotted rgb(35, 164, 162);
+            }
 
 
             .divj { grid-area: 5 / 2 / 6 / 3; }
