--- a/index.css
+++ b/index.css
@@ -340,3 +340,30 @@ text-align: center;
 
 
             .divk { grid-area: 6 / 2 / 7 / 3; }
+
+            .divi p {
+                color:#00385a;
+                background-color: white;
+                font-size: 30px;
+                text-indent: 30px;
+                border: 1px solid rgb(255, 255, 255);
+                outline: 5px dotted rgb(35, 164, 162);
+            }
+
+            .divk p {
+                color:#00385a;
+                background-color: white;
+                font-size: 30px;
+                text-indent: 30px;
+                border: 1px solid rgb(255, 255, 255);
+                outline: 5px dotted rgb(35, 164, 162);
+            }
+
+            .divi g {
+                color:#00385a;
+                background-color: white;
+                font-size: 30px;
+                text-indent: 30px;
+                border: 1px solid rgb(255, 255, 255);
+                outline: 5px dotted rgb(35, 164, 162);
+            }
