--- a/index.css
+++ b/index.css
@@ -370,4 +370,5 @@ text-align: center;
                 text-indent: 30px;
                 border: 1px solid rgb(255, 255, 255);
                 outline: 5px dotted rgb(35, 164, 162);
+                width: 500px;
             }
