--- a/index.css
+++ b/index.css
@@ -379,3 +379,16 @@ text-align: center;
             .diva h1 {
                 color: white;
             }
+
+            .aboutparent {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(2, 1fr);
+                grid-column-gap: 0px;
+                grid-row-gap: 20px;
+                }
+                
+                .aboutdiv1 { grid-area: 1 / 1 / 2 / 2; }
+                .aboutdiv2 { grid-area: 1 / 2 / 2 / 3; }
+                .aboutdiv3 { grid-area: 2 / 1 / 3 / 2; }
+                .aboutdiv4 { grid-area: 2 / 2 / 3 / 3; }
