--- a/index.css
+++ b/index.css
@@ -381,7 +381,7 @@ text-align: center;
             }
 
             .aboutparent {
-                display: grid;
+                display: flex;
                 grid-template-columns: repeat(2, 1fr);
                 grid-template-rows: repeat(2, 1fr);
                 grid-column-gap: 0px;
