--- a/index.css
+++ b/index.css
@@ -380,4 +380,6 @@ text-align: center;
                 color: white;
             }
 
-            
+            .aboutdiv2 {
+                color:white;
+            }
