--- a/aboutus.css
+++ b/aboutus.css
@@ -7,9 +7,41 @@
     }
     
     .div1 { grid-area: 1 / 1 / 2 / 2; }
+
+    /*Div 2 Nav*/
     .div2 { grid-area: 1 / 2 / 2 / 3; }
+
+    .nav-flex-row {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        position: absolute;
+        z-index: 100;
+        left: 0;
+        width: 100%;
+        padding: 500;
+    }
+    
+    .nav-flex-row li {
+        background-color: white;
+        width: 100%;
+        text-decoration: none;
+        list-style-type: none;
+        padding: 20px 15px;
+    }
+
+
     .div3 { grid-area: 2 / 1 / 3 / 3; }
+
+
     .div4 { grid-area: 3 / 1 / 4 / 2; }
+
+
     .div5 { grid-area: 3 / 2 / 4 / 3; }
+
+
     .div6 { grid-area: 4 / 1 / 5 / 2; }
+
+
     .div7 { grid-area: 4 / 2 / 5 / 3; }
+
