--- a/aboutus.css
+++ b/aboutus.css
@@ -85,8 +85,29 @@
         padding: 20px 15px;
     }
 
-
+/*Div 3 Banner*/
     .div3 { grid-area: 2 / 1 / 3 / 3; }
+
+    .div3 { 
+        grid-area: 2 / 1 / 3 / 4; 
+            background-color: rgb(118, 40, 179); 
+            height: 500px;
+            width: 100%;
+    }
+
+    .div3 {
+        background-color: #00385a;
+        overflow: auto;
+        white-space: nowrap;
+        padding: 1px;
+      }
+      
+    .div3 img {
+        height: 90%;
+        width: auto;
+        padding: 10px;
+        outline: #ccece6 10px;
+      }
 
 
     .div4 { grid-area: 3 / 1 / 4 / 2; }
